# todo-web-app

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yaml  docker-compose.yml  pom.xml
migrations/: 0001_setup.sql  0002_todo.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/api/: route.rs
src/api/handler/: health_check.rs  mod.rs  todo_handler.rs
src/api/model/: todo.rs
src/main/java/com/wild/todo_web_app/: TodoWebAppApplication.java
src/main/java/com/wild/todo_web_app/controller/: TodoController.java
src/main/java/com/wild/todo_web_app/exception/: TodoNotFoundException.java
src/main/java/com/wild/todo_web_app/model/: Priority.java  Todo.java
src/main/java/com/wild/todo_web_app/repository/: TodoRepository.java
src/main/java/com/wild/todo_web_app/service/: TodoService.java
src/main/java/com/wild/todo_web_app/service/impl/: TodoServiceImpl.java
src/main/resources/: application.yml
src/test/java/com/wild/todo_web_app/: TodoWebAppApplicationTests.java
src/test/java/com/wild/todo_web_app/controller/: TodoControllerTest.java
src/test/java/com/wild/todo_web_app/service/: TodoServiceTest.java
src/utils/: app_state.rs  init_environment.rs  mod.rs
tests/: health_check.rs  todo_handler.rs
