[package]
name = "todo_web_app"
version = "0.1.0"
description = "Backend for a Todo Web App written in Rust"
authors = ["TomasWild"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "todo_web_app"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.8.0-alpha.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
anyhow = "1.0.89"
thiserror = "1.0.64"

[dependencies.sqlx]
version = "0.8.2"
features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"]

[dev-dependencies]
tower = "0.5.1"
tower-http = "0.6.1"